# daily-ai-times

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  architecture.excalidraw  index.html  new_sources.md  new_telugu_sources.md  orchestrator.run  package-lock.json  package.json  pyproject.toml  sw.js  test_articles.json  test_ultra_fast_collection.py
.claude/: CLAUDE.md
.claude/commands/: parity-check.md  run-pipeline.md
.github/instructions/: copilot-instructions.md
.github/workflows/: ci.yml  collect-news.yml  deploy-on-merge.yml  frontend-ci.yml  pipeline-v2.yml  temp-test-leaderboard.yml  update-capex.yml  (+2 more)
api/: archives.json  index.html  latest.json  widget.json
config/: sources.json
css/: main.css
data/: news.json
docs/: architecture-preview.html  architecture.md  cerebras-limits.md  cutover-plan.md  engagement-pipeline.md  future-plans.md  growth.md  index.html  legal-compliance.md  provider-limits.md  reorganization-summary.md  security.md  swarm-architecture-upgrade.md  workflow-visualization.md
js/: app.js  articles.js  performance.js
mcp-server/: config.js  package-lock.json  package.json  server.js  tools.js
scripts/: collect_news.py  create_consolidated_sources.py  extract_article_images.py  generate_api.py  inject-analytics.sh  requirements.txt  test_backend.py  test_deploy_sim.sh  test_frontend_contract.mjs  test_frontend_static.mjs  test_sources.py  validate_telugu_rss.py
tests/: conftest.py  mock_provider.py  parity_runner.py  test_agent_smoke.py  test_pipeline.py  test_providers.py  test_tools.py
(+252 files in other folders)
