[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-ai-times"
version = "3.0.0"
description = "Serverless AI-curated daily news aggregation powered by Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Siddanth Emani"}]

dependencies = [
    "claude-agent-sdk>=0.2.111",
    "anthropic>=0.40.0",
    "groq>=0.13.0",
    "cerebras-cloud-sdk>=1.0.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "orjson>=3.10.0",
    "rich>=13.8.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
daily-ai-times = "src.agent.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["src.legacy*", "src.frontend*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
